--- a/home.html
+++ b/home.html
@@ -2,15 +2,37 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="og:type" content="website" />
     <meta name="twitter:card" content="photo" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/home.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <!-- <link rel="stylesheet" type="text/css" href="css/home.css" />
     <link rel="stylesheet" type="text/css" href="css/styleguide.css" />
-    <link rel="stylesheet" type="text/css" href="css/globals.css" />
+    <link rel="stylesheet" type="text/css" href="css/globals.css" /> -->
   </head>
-  <body style="margin: 0; background: #ffffff">
+  <body style="margin: 0; width: 100%; background: #ffffff; padding: 0px;">
+    <div class = "main-wrapper container-fluid">
+      <div class ="header-container container-fluid">
+        <div class = "header row">
+          <div class = "col-9 col-lg-5 simo-designs-header-wrapper" style="background-color: red"><span class="simo-designs-header-name">SIMONTON DESIGNS, LLC</span>
+          </div>
+          <!-- <div class = "col-0 col-md-0 col-lg-1" style="background-color: black"></div> -->
+          <div class="col-12 col-md-6 col-lg-6 menu-wrapper">
+            <div class="menu-item"><a href="home.html">HOME</a></div>
+            <div class="menu-item"><a href="portfolio.html">PORTFOLIO</a></div>
+            <div class="menu-item"><a href="design.html">UX DESIGN</a></div>
+            <div class="menu-item"><a href="blog.html">BLOG</a></div>
+            <div class="menu-item"><a href="contact-us.html">CONTACT US</a></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
+
 
 
 
