--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a href="contact-us.html">
           <div class="desktop-top-menu-xl4bh6">
             <div class="simonton-designs-llc-kCESbg montserrat-bold-dove-gray-36px">SIMONTON DESIGNS, LLC</div>
-            <div class="home-kCESbg montserrat-normal-persian-red-24px">HOME</div>
+            <div class="home-kCESbg montserrat-normal-persian-red-24px"><a href="home.html">HOME</a></div>
             <a href="portfolio.html" onclick="window.event.stopPropagation()"
               ><div class="portfolio-kCESbg montserrat-normal-dove-gray-24px">PORTFOLIO</div></a
             ><a href="ux-design.html" onclick="window.event.stopPropagation()"
