--- a/home.html
+++ b/home.html
@@ -13,20 +13,85 @@
   </head>
   <body style="margin: 0; width: 100%; background: #ffffff; padding: 0px;">
     <div class = "main-wrapper container-fluid">
+
+
+
       <div class ="header-container container-fluid">
+        <!-- <div class="row" style="width: 100%;">
+          <div class="col-0 col-md-1 col-lg-1" style="background-color: red;">
+          </div>
+          <div class="col-9 col-md-5 col-lg-5" style="background-color: blue;">
+            <span class="simo-designs-header-name">SIMONTON DESIGNS, LLC</span>
+          </div>
+          <div class="col-12 col-md-6 col-lg-6" style="background-color: red;">
+            <div class="col-12 col-md-6 col-lg-6 menu-wrapper">
+              <div class="menu-item"><a href="home.html">HOME</a></div>
+              <div class="menu-item"><a href="portfolio.html">PORTFOLIO</a></div>
+              <div class="menu-item"><a href="design.html">UX DESIGN</a></div>
+              <div class="menu-item"><a href="blog.html">BLOG</a></div>
+              <div class="menu-item"><a href="contact-us.html">CONTACT US</a></div>
+          </div> -->
+
+        </div>
         <div class = "header row">
-          <div class = "col-9 col-lg-5 simo-designs-header-wrapper" style="background-color: red"><span class="simo-designs-header-name">SIMONTON DESIGNS, LLC</span>
+          <!-- <div class="col-0 col-md-1 col-lg-1" -->
+          <div class = "col-9 col-lg-5 simo-designs-header-wrapper"><span class="simo-designs-header-name">SIMONTON DESIGNS, LLC</span>
           </div>
           <!-- <div class = "col-0 col-md-0 col-lg-1" style="background-color: black"></div> -->
           <div class="col-12 col-md-6 col-lg-6 menu-wrapper">
-            <div class="menu-item"><a href="home.html">HOME</a></div>
+            <div class="menu-item"><a class="menu-link" href="home.html">HOME</a></div>
             <div class="menu-item"><a href="portfolio.html">PORTFOLIO</a></div>
             <div class="menu-item"><a href="design.html">UX DESIGN</a></div>
             <div class="menu-item"><a href="blog.html">BLOG</a></div>
             <div class="menu-item"><a href="contact-us.html">CONTACT US</a></div>
           </div>
         </div>
+
+
+      <div class="landing-quote">
+        <h1>THE ART OF WEB DEVELOPMENT AND DESIGN.....</h1>
       </div>
+
+
+      <div class="landing-pic-container">
+        <div class="landing-portfolio-link-wrapper">
+          <div class="landing-portfolio-link">OUR PORTFOLIO ></div>
+        </div>
+        <!-- <img class="landing-pic" src="img/snow-cliff.png" alt="Snowy Cliff" /> -->
+
+
+      </div>
+
+
+      <div class="services-wrapper">
+        <h2>OUR SERVICES</h2>
+        <div class="services-item-wrapper row">
+          <!-- <div class="col-0 col-md-0 col-lg-1"></div> -->
+          <div class="col-12 col-md-4 col-lg-4 services-item">
+            <img class="services-item-pic" src="img/web-development-pic.png"/>
+            <div class="services-item-text">Web &amp; App Design &amp; Development</div>
+          </div>
+          <div class="col-12 col-md-4 col-lg-4 services-item">
+            <img class="services-item-pic" src="img/data-pic.png"/>
+            <div class="services-item-text">Data Science</div>
+          </div>
+          <div class="col-12 col-md-4 col-lg-4 services-item">
+            <img class="services-item-pic" src="img/content-pic.png"/>
+            <div class="services-item-text">Content &amp; Branding</div>
+          </div>
+          <!-- <div class="col-0 col-md-0 col-lg-1"></div> -->
+        </div>
+
+
+
+      </div>
+
+
+
+
+
+
+
     </div>
 
 
