--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container-center-horizontal">
       <div class="home screen">
         <div class="see-our-case-studies-xl4bh6 montserrat-normal-white-36px">SEE OUR CASE STUDIES</div>
-        <div class="slider-xl4bh6"><img class="contain-46sYsV" src="img/contain-1@1x.png" /></div>
+        <div class="slider-xl4bh6"><img class="contain-46sYsV" src="img/snow-cliff.png" /></div>
         <div class="pagination-xl4bh6">
           <p class="prev-next-YWSBsx">
             <span class="span0-Le8NuF">PREV&nbsp;&nbsp;&nbsp;&nbsp; </span
@@ -52,9 +52,9 @@
           <div class="text-1QPGYH"><p class="x2021-all-rights-reserved-kadZKS">© 2021. All Rights Reserved</p></div>
         </div>
         <div class="our-services-xl4bh6 montserrat-bold-black-80px">Our Services</div>
-        <img class="web-development-photo-xl4bh6" src="img/web-development-photo@1x.png" />
-        <img class="data-photo-xl4bh6" src="img/data-photo@1x.png" />
-        <img class="content-photo-xl4bh6" src="img/content-photo@1x.png" />
+        <img class="web-development-photo-xl4bh6" src="img/web-development-pic.png" />
+        <img class="data-photo-xl4bh6" src="img/data-pic.png" />
+        <img class="content-photo-xl4bh6" src="img/content-pic.png" />
         <div class="web-app-design-development-xl4bh6 turnip-medium-black-45px">
           Web &amp; App Design &amp; Development
         </div>
