main page rough finish

--- a/home.html
+++ b/home.html
@@ -87,6 +87,45 @@
       </div>
 
 
+      <div class="about-us-wrapper container">
+        <div class="row">
+          <div class="col-12 col-md-6 col-lg-6 about-pic">
+            <img src="../img/animated-laptop.png" alt="animated-laptop" />
+
+          </div>
+          <div class="col-12 col-md-6 col-lg-6 about-text">
+            <h2>ABOUT US</h2>
+            <p>We are a diverse and experienced team with the right mix of skills to help you with a range of design and
+            development needs.</p>
+            <div class="about-case-studies-link">
+              Read our UX case studies >
+            </div>
+          </div>
+
+        </div>
+
+        <div class="our-info row">
+          <div class="col-12 col-md-6 col-lg-6 info-marc">
+            <img src="img/marc-cliff.png" alt="marc-cliff" />
+            <p>Software Develpment, Data Science <br>
+            Python, JavaScript, React MySQL</p>
+          </div>
+          <div class="col-12 col-md-6 col-lg-6 info-marc">
+            <img src="img/liz-cliff.png" alt="liz-cliff" />
+            <p>UX Design, Content Creation <br />
+            Adobe XD, Photoshop, InDesign, Illustrator<br />Microsoft Office Suite</p>
+          </div>
+
+        </div>
+
+
+
+      </div>
+
+      <div class="footer row">
+        <span>© 2021 Simonton Designs, LLC. All Rights Reserved</span>
+      </div>
+
 
 
 
