--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
         <div class="content-branding-xl4bh6 turnip-medium-black-45px">Content &amp; Branding</div>
         <img class="soundtrackmycity-xl4bh6" src="img/soundtrackmycity@1x.png" />
         <div class="about-us-xl4bh6">About Us</div>
-        <img class="man-woman-laptop-xl4bh6" src="img/man---woman-laptop@1x.png" />
+        <img class="man-woman-laptop-xl4bh6" src="img/animated-laptop.png" />
         <div class="we-are-a-divers-velopment-needs-xl4bh6 turnip-medium-black-30px">
           We are a diverse and experienced team with the right mix of skills to help you with a range of design and
           development needs.
         </div>
-        <img class="marc-cliff-smilebw-xl4bh6" src="img/marc-cliff-smilebw@1x.png" />
-        <img class="meonhalfdomebw-xl4bh6" src="img/meonhalfdomebw@1x.png" />
+        <img class="marc-cliff-smilebw-xl4bh6" src="img/marc-cliff.png" />
+        <img class="meonhalfdomebw-xl4bh6" src="img/liz-cliff.png" />
         <div class="marc-simonton-xl4bh6">Marc Simonton</div>
         <div class="liz-simonton-xl4bh6">Liz Simonton</div>
         <div class="software-develo-nt-data-science-xl4bh6 turnip-medium-black-30px">
