portfolio about done

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
             CONTENT</span
           >
         </p>
-        <div class="image-oG8w0l"><img class="contain-rEnTxI" src="img/contain@1x.png" /></div>
+        <div class="image-oG8w0l"><img class="contain-rEnTxI" src="img/liz-rock-full-width.png" /></div>
         <div class="text-oG8w0l">
           <p class="we-understand-t-y-communication-jizJwE montserrat-normal-granite-gray-15px">
             <span class="span0-q3EEJY montserrat-normal-granite-gray-15px"
@@ -58,17 +58,17 @@
         <h1 class="title-oG8w0l montserrat-bold-black-80px">OUR PORTFOLIO</h1>
         <img
           class="screen-shot-202-20-at-13424-pm-oG8w0l smart-layers-pointers"
-          src="img/screen-shot-2021-10-20-at-1-34-24-pm@1x.png"
+          src="img/data-app.png"
         />
         <a href="https://github.com/msimonton/upside-events" target="_blank"
           ><img
             class="screen-shot-202-20-at-35933-pm-oG8w0l smart-layers-pointers"
-            src="img/screen-shot-2021-10-20-at-3-59-33-pm@1x.png"
+            src="img/pink-site.png"
           /> </a
         ><a href="https://acepediatrictherapycospgs.com/" target="_blank"
           ><img
             class="screen-shot-202-20-at-40235-pm-oG8w0l smart-layers-pointers"
-            src="img/screen-shot-2021-10-20-at-4-02-35-pm@1x.png"
+            src="img/ace-site.png"
           />
         </a>
         <div class="screen-shot-202-20-at-40959-pm-oG8w0l smart-layers-pointers">
@@ -90,16 +90,16 @@
         <a href="https://xd.adobe.com/view/9778f880-c3ad-4e80-877e-bfb98cd1dd44-c22b/"
           ><img
             class="screen-shot-202-22-at-92209-am-oG8w0l smart-layers-pointers"
-            src="img/screen-shot-2021-10-22-at-9-22-09-am@1x.png"
+            src="img/business-app.png"
           /> </a
         ><a href="https://xd.adobe.com/view/2ed1bf9c-87c1-4b5b-8a22-379ed10850e2-7b82/" target="_blank"
           ><img
             class="screen-shot-202-20-at-40543-pm-oG8w0l smart-layers-pointers"
-            src="img/screen-shot-2021-10-20-at-4-05-43-pm@1x.png"
+            src="img/flower-app.png"
           /> </a
         ><a href="https://lizsimontonphotoart.com/" target="_blank"
-          ><img class="imgee84-feb81-b96-1-oG8w0l smart-layers-pointers" src="img/img-ee84feb81b96-1@1x.png" /> </a
-        ><img class="mari-logo-on-gift-bag-oG8w0l smart-layers-pointers" src="img/mari-logo-on-gift-bag@1x.png" />
+          ><img class="imgee84-feb81-b96-1-oG8w0l smart-layers-pointers" src="img/photo-art.png" /> </a
+        ><img class="mari-logo-on-gift-bag-oG8w0l smart-layers-pointers" src="img/studio-m-logo.png" />
         <div class="rectangle-9-oG8w0l"></div>
         <div class="rectangle-13-oG8w0l"></div>
         <div class="rectangle-14-oG8w0l"></div>
