--- a/contact-us.html
+++ b/contact-us.html
@@ -30,9 +30,9 @@
             <div class="lizsimontongmailcom-5fcaO7 nunitosans-bold-black-19px">Liz.simonton@gmail.com</div>
             <div class="x1-719-321-7887-5fcaO7 nunitosans-bold-black-19px">1 719-321-7887</div>
             <div class="colorado-springs-co-5fcaO7 nunitosans-bold-black-19px">Colorado Springs, CO</div>
-            <img class="email-5fcaO7" src="img/email@1x.png" />
-            <img class="marker-5fcaO7" src="img/marker@1x.png" />
-            <img class="phone-1-5fcaO7" src="img/phone--1-@1x.png" />
+            <img class="email-5fcaO7" src="img/email-icon.png" />
+            <img class="marker-5fcaO7" src="img/marker-icon.png" />
+            <img class="phone-1-5fcaO7" src="img/phone-icon.png" />
           </div>
           <div class="rectangle-23-6u58Y0 border-1px-bon-jour"></div>
           <div class="rectangle-24-6u58Y0 border-1px-bon-jour"></div>
