--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="twitter:card" content="photo" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/simple-parallax-js@5.6.1/dist/simpleParallax.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/blogg.css">
+    <link rel="stylesheet" type="text/css" href="css/contact.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,37 +40,67 @@
           <li class="nav-item">
             <a class="nav-link" href="design.html">UX DESIGN</a>
           </li>
-          <li class="nav-item active">
-            <a class="nav-link current-tab" href="blog.html">BLOG</a>
-          </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">CONTACT US</a>
+            <a class="nav-link" href="blog.html">BLOG</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link current-tab" href="contact.html">CONTACT US</a>
           </li>
         </ul>
       </div>
     </nav>
+<div class="contact-main">
 
-    <h1 class="blog-header">BLOG & NEWS</h1>
-    <div class="blog-wrapper">
+    <h1 class="contact-header">CONTACT US</h1>
 
 
-      <div class="blog-post-wrapper">
-        <h3>Starting a new business in 2021!</h3>
-        <p>Thinking about starting a new business in 2021 – 2022?  We’ve created a site to help you research and understand the different business types you might be considering.</p>
-        <a href="startyourbusinesstoday.website" target="_blank">startyourbusinesstoday.website</a>
-        <p>Not surprisingly, new business formations surged in the US in 2020 and 2021 as a direct result of the pandemic (see chart below).</p>
-        <div class="blog-business-pic"></div>
-        <p>So, once you’ve decided to start your new business, one of the first to-do’s will be to set up your website and online presence.   Depending on whether you plan to drive new business through online searches of your content and products, or whether you just need to have a website to showcase your work and create “legitimacy” to your business, your website and online presence will require some thought and time to create an experience that stands out to potential customers. </p>
-        <div class="blog-business-pic-two"></div>
-        <p>With so much competition on the internet, it will be key to incorporate certain pages types and design considerations to achieve the “wow” factor for your website/online presence.</p>
-        <p>See the following article that discusses the must have pages for your site in 2021:</p>
-        <a href="https://digital.com/how-to-create-a-website/must-have-pages/" target="_blank">https://digital.com/how-to-create-a-website/must-have-pages/</a>
-        <p>And this article that discusses important design trends for 2021:</p>
-        <a href="https://seota.com/7-trends-in-small-business-web-design-in-2021/" target="_blank">https://seota.com/7-trends-in-small-business-web-design-in-2021/</a>
-        <p>Whatever your needs are, we at Simonton Designs, LLC can help you design and set up your unique website for your new business.  We can provide anything from theme-based Wordpress sites, to fully custom sites, including unique visual content, UX Design and marketing strategies.</p>
-        <p>Reach out to us for a free consultation on how we can help!</p>
-        <p>The Simonton Design Team</p>
+    <div class="contact-wrapper row">
+      <div class="col-0 col-md-1"></div>
+      <div class="col-12 col-md-4 contact-left">
+        <h3>Let's Connect</h3>
+        <p class="contact-message">Email, call or send us a message and let us know what you’re looking for! We are glad to
+          discuss and explore the ways we can help and work together.</p>
+
+
+          <table>
+            <tr>
+              <td><img class="contact-icon" src="img/email-icon.png" /></td>
+              <td class="contact-line">Liz.simonton@gmail.com</td>
+            </tr>
+            <tr>
+              <td><img class="contact-icon" src="img/phone-icon.png" /></td>
+              <td class="contact-line">1-719-123-4567</td>
+            </tr>
+            <tr>
+              <td><img class="contact-icon" src="img/marker-icon.png" /></td>
+              <td class="contact-line">Colorado Springs, CO</td>
+            </tr>
+          </table>
+
+
       </div>
+      <div class="col-0 col-md-1"></div>
+
+      <div class="col-12 col-md-4 contact-right">
+        <h3>Send us a message</h3>
+        <form>
+          <label for="name">First & Last Name</label><br>
+          <input class="input-fields" type="text" id="name" name="name" required><br>
+          <label for="phone">Phone number</label><br>
+          <input class="input-fields" type="text" id="phone" name="phone">
+          <label for="email">Email address</label><br>
+          <input class="input-fields" type="text" id="email" name="email">
+          <label for="co-name">Company name (optional)</label><br>
+          <input class="input-fields" type="text" id="co-name" name="co-name">
+          <label for="message">Message</label><br>
+          <!-- <input class="input-fields" type="text" id="message" name="message"> -->
+          <textarea class="input-fields" name="message" cols="40" rows="5"></textarea>
+        </form>
+
+      </div>
+
+
+
 
 
 
@@ -85,6 +115,7 @@
 
 
 
+  </div>
 
     <div class="footer row">
       <span>© 2021 Simonton Designs, LLC. All Rights Reserved</span>
