--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
             <div class="home-kCESbg montserrat-normal-persian-red-24px"><a href="home.html">HOME</a></div>
             <a href="portfolio.html" onclick="window.event.stopPropagation()"
               ><div class="portfolio-kCESbg montserrat-normal-dove-gray-24px">PORTFOLIO</div></a
-            ><a href="ux-design.html" onclick="window.event.stopPropagation()"
+            ><a href="design.html" onclick="window.event.stopPropagation()"
               ><div class="ux-design-kCESbg montserrat-normal-dove-gray-24px">UX DESIGN</div></a
             ><a href="blog.html" onclick="window.event.stopPropagation()"
               ><div class="blog-kCESbg montserrat-normal-dove-gray-24px">BLOG</div></a
