--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
       <div class="collapse navbar-collapse" id="navbarItemWrapper">
         <ul class="navbar-nav ml-auto mt-2 mt-lg-0 flex-nowrap">
           <li class="nav-item active">
-            <a class="nav-link" href="home.html">HOME <span class="sr-only">(current)</span></a>
+            <a class="nav-link current-tab" href="index.html">HOME <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="portfolioo.html">PORTFOLIO</a>
+            <a class="nav-link" href="portfolio.html">PORTFOLIO</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="designn.html">UX DESIGN</a>
+            <a class="nav-link" href="design.html">UX DESIGN</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="blogg.html">BLOG</a>
+            <a class="nav-link" href="blog.html">BLOG</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">CONTACT US</a>
